--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
 <body>
 <h1>Road Sign Recognition using Image Classification</h1>
 <p>
-Project Description:
-The goal of this project is to develop a neural network-based image classification system that can accurately recognize the type of road sign present in an image. Road signs play a crucial role in directing traffic and ensuring the safety of drivers and pedestrians. However, current systems for recognizing road signs are often unreliable and can lead to accidents. By using image classification techniques and neural networks, this project aims to create a more accurate and reliable system for recognizing road signs.
+Project Description:<br>
+  <br>
+The goal of this project is to develop a neural network-based image classification system that can accurately recognize the type of road sign present in an image. Road signs play a crucial role in directing traffic and ensuring the safety of drivers and pedestrians. However, current systems for recognizing road signs are often unreliable and can lead to accidents. By using image classification techniques and neural networks, this project aims to create a more accurate and reliable system for recognizing road signs.<br>
+<br>
+The project will involve the collection and annotation of a large dataset of road sign images, which will be used to train and test the neural network. The network will be designed using state-of-the-art architectures and techniques, such as convolutional neural networks (CNNs) and transfer learning. The system will be evaluated using standard metrics such as accuracy and F1-score.<br>
+  <br>
 
-The project will involve the collection and annotation of a large dataset of road sign images, which will be used to train and test the neural network. The network will be designed using state-of-the-art architectures and techniques, such as convolutional neural networks (CNNs) and transfer learning. The system will be evaluated using standard metrics such as accuracy and F1-score.
+Goals:<br>
+  <br>
 
-Goals:
-
-To collect and annotate a large dataset of road sign images
-To design and train a neural network-based image classification system using CNNs and transfer learning
-To achieve high accuracy and F1-score in recognizing different types of road signs
-To improve the robustness of the system against variations in lighting and weather conditions
-To develop an easy-to-use user interface for the system and integrate it into existing traffic management systems.
+To collect and annotate a large dataset of road sign images<br>
+To design and train a neural network-based image classification system using CNNs and transfer learning<br>
+To achieve high accuracy and F1-score in recognizing different types of road signs<br>
+To improve the robustness of the system against variations in lighting and weather conditions<br>
+To develop an easy-to-use user interface for the system and integrate it into existing traffic management systems<br>
   
   </p>
 </body>
