--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 <body>
 <h1>Road Sign Recognition using Image Classification</h1>
 <p>
-Project Description:<br>
+<h2>Project Description:</h2.<br>
   <br>
 The goal of this project is to develop a neural network-based image classification system that can accurately recognize the type of road sign present in an image. Road signs play a crucial role in directing traffic and ensuring the safety of drivers and pedestrians. However, current systems for recognizing road signs are often unreliable and can lead to accidents. By using image classification techniques and neural networks, this project aims to create a more accurate and reliable system for recognizing road signs.<br>
 <br>
 The project will involve the collection and annotation of a large dataset of road sign images, which will be used to train and test the neural network. The network will be designed using state-of-the-art architectures and techniques, such as convolutional neural networks (CNNs) and transfer learning. The system will be evaluated using standard metrics such as accuracy and F1-score.<br>
   <br>
 
-Goals:<br>
+<h3>Goals:</h3><br>
   <br>
 
 To collect and annotate a large dataset of road sign images<br>
