--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@ The project will involve the collection and annotation of a large dataset of roa
 To collect and annotate a large dataset of road sign images<br>
 To design and train a neural network-based image classification system using CNNs and transfer learning<br>
 To achieve high accuracy and F1-score in recognizing different types of road signs<br>
-To improve the robustness of the system against variations in lighting and weather conditions<br>
-To develop an easy-to-use user interface for the system and integrate it into existing traffic management systems</b><br>
+To improve the robustness of the system against variations in lighting and weather conditions<br></b><br>
   
   </p>
 </body>
